objects/ERP_Sales_Prices_SAP__c.object
<CustomObject>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the active prices in a PCKC</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPriceHolder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPriceHolder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>markForDeletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>markForDeletion</label>
        <type>Checkbox</type>
    </fields>
    <label>ERP Sales Prices - SAP</label>
    <listViews>
        <fullName>A641_ZD93_A683</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>Country_Code__c</columns>
        <columns>NAME</columns>
        <columns>Material_Code__c</columns>
        <columns>Sold_To_Code__c</columns>
        <columns>Rate__c</columns>
        <columns>Per__c</columns>
        <columns>Unit__c</columns>
        <columns>UoM__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>Scale_UoM_Scale_Unit__c</columns>
        <columns>KC_SAP__c</columns>
        <columns>Key_Combination_Code__c</columns>
        <columns>Pricing_Condition_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>SAP_Cluster__c</field>
            <operation>equals</operation>
            <value>WB1</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notContain</operation>
            <value>Vinoth</value>
        </filters>
        <filters>
            <field>KC_SAP__c</field>
            <operation>contains</operation>
            <value>#</value>
        </filters>
        <label>A641 ZD93 A683</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>A821</fullName>
        <columns>Key_Combination_Code__c</columns>
        <columns>Sales_Org_Code__c</columns>
        <columns>Distribution_Channel_Code__c</columns>
        <columns>Division_Code__c</columns>
        <columns>Material_Code__c</columns>
        <columns>UoM__c</columns>
        <columns>PCKC_SAP__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Key_Combination__c</field>
            <operation>contains</operation>
            <value>PH</value>
        </filters>
        <label>A821</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Material__c</columns>
        <columns>Material_Code__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>Price_Holder__c</columns>
        <columns>isPriceHolder__c</columns>
        <columns>Sales_Office_Code__c</columns>
        <columns>Sales_Office__c</columns>
        <columns>Customer_Price_Group__c</columns>
        <columns>Customer_Price_Group_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>SPSAP:20180914-000000</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved</fullName>
        <columns>NAME</columns>
        <columns>Approved_Date__c</columns>
        <columns>Project_Id__c</columns>
        <columns>KC_SAP__c</columns>
        <columns>isPriceHolder__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>markForDeletion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approved_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Approved</label>
    </listViews>
    <listViews>
        <fullName>BI_A640_ZD91_A773</fullName>
        <columns>NAME</columns>
        <columns>Material_Code__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>Rate__c</columns>
        <columns>Unit__c</columns>
        <columns>Per__c</columns>
        <columns>UoM__c</columns>
        <columns>Material_Price_Group_Code__c</columns>
        <columns>Sales_Org_Code__c</columns>
        <columns>Sold_To_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SAP_Cluster__c</field>
            <operation>equals</operation>
            <value>CB1</value>
        </filters>
        <filters>
            <field>Sales_Org_Code__c</field>
            <operation>equals</operation>
            <value>A640</value>
        </filters>
        <filters>
            <field>Pricing_Condition_Code__c</field>
            <operation>equals</operation>
            <value>ZD91</value>
        </filters>
        <filters>
            <field>Key_Combination_Code__c</field>
            <operation>equals</operation>
            <value>A773</value>
        </filters>
        <label>BI A640 ZD91 A773</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BI_A640_ZD9K_A517</fullName>
        <columns>Material_Code__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>Rate__c</columns>
        <columns>Unit__c</columns>
        <columns>Per__c</columns>
        <columns>UoM__c</columns>
        <columns>Material_Price_Group_Code__c</columns>
        <columns>Sales_Org_Code__c</columns>
        <columns>Sold_To_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SAP_Cluster__c</field>
            <operation>equals</operation>
            <value>CB1</value>
        </filters>
        <filters>
            <field>Sales_Org_Code__c</field>
            <operation>equals</operation>
            <value>A640</value>
        </filters>
        <filters>
            <field>Pricing_Condition_Code__c</field>
            <operation>equals</operation>
            <value>ZD9K</value>
        </filters>
        <filters>
            <field>Key_Combination_Code__c</field>
            <operation>equals</operation>
            <value>A517</value>
        </filters>
        <filters>
            <field>Approved_Date__c</field>
            <operation>equals</operation>
            <value>3/1/2013 12:00 AM</value>
        </filters>
        <label>BI A640 ZD9K A517</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BI_A640_ZPSE_A582</fullName>
        <columns>NAME</columns>
        <columns>Sold_To_Code__c</columns>
        <columns>Material_Code__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>isPriceHolder__c</columns>
        <columns>Rate__c</columns>
        <columns>Unit__c</columns>
        <columns>Per__c</columns>
        <columns>UoM__c</columns>
        <columns>Material_Price_Group_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Key_Combination_Code__c</field>
            <operation>contains</operation>
            <value>A616</value>
        </filters>
        <label>BI A640 ZPSE A582</label>
    </listViews>
    <listViews>
        <fullName>BI_A640_ZPSE_A821</fullName>
        <columns>Material_Code__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>Rate__c</columns>
        <columns>Unit__c</columns>
        <columns>Per__c</columns>
        <columns>UoM__c</columns>
        <columns>Material_Price_Group_Code__c</columns>
        <columns>Sales_Org_Code__c</columns>
        <columns>isPriceHolder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SAP_Cluster__c</field>
            <operation>equals</operation>
            <value>CB1</value>
        </filters>
        <filters>
            <field>Sales_Org_Code__c</field>
            <operation>equals</operation>
            <value>A640</value>
        </filters>
        <filters>
            <field>Pricing_Condition_Code__c</field>
            <operation>equals</operation>
            <value>ZPSE</value>
        </filters>
        <filters>
            <field>Key_Combination_Code__c</field>
            <operation>equals</operation>
            <value>A821</value>
        </filters>
        <filters>
            <field>Material_Code__c</field>
            <operation>equals</operation>
            <value>D11965486</value>
        </filters>
        <label>BI A640 ZPSE A821</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>D12049236</fullName>
        <columns>NAME</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>Price_Holder__c</columns>
        <columns>markForDeletion__c</columns>
        <columns>Rate__c</columns>
        <columns>Approved_Date__c</columns>
        <columns>Unit__c</columns>
        <columns>Per__c</columns>
        <columns>UoM__c</columns>
        <columns>Customer_Specific__c</columns>
        <columns>Sales_Price_Type__c</columns>
        <columns>Sold_To_Code__c</columns>
        <columns>Sold_To__c</columns>
        <columns>Scaled_Price_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Material_Code__c</field>
            <operation>equals</operation>
            <value>D12049236</value>
        </filters>
        <filters>
            <field>Key_Combination_Code__c</field>
            <operation>equals</operation>
            <value>A580</value>
        </filters>
        <filters>
            <field>Pricing_Condition_Code__c</field>
            <operation>equals</operation>
            <value>ZPSE</value>
        </filters>
        <label>D12049236</label>
    </listViews>
    <listViews>
        <fullName>D12049411</fullName>
        <columns>NAME</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>Price_Holder__c</columns>
        <columns>markForDeletion__c</columns>
        <columns>Approved_Date__c</columns>
        <columns>Rate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sales_Org_Code__c</columns>
        <columns>Unit__c</columns>
        <columns>UoM__c</columns>
        <columns>Sold_To_Code__c</columns>
        <columns>Sales_Price_Type__c</columns>
        <columns>Customer_Specific__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PCKC__c</field>
            <operation>equals</operation>
            <value>ZPSEA64010A6A619Z3P4</value>
        </filters>
        <label>D12049411</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>D12356956</fullName>
        <columns>NAME</columns>
        <columns>Rate__c</columns>
        <columns>isPriceHolder__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>Price_Holder__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Customer_Specific__c</columns>
        <columns>markForDeletion__c</columns>
        <columns>Key_Combination_Code__c</columns>
        <columns>PCKC__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Material_Code__c</field>
            <operation>equals</operation>
            <value>D14655253</value>
        </filters>
        <filters>
            <field>Sold_To_Code__c</field>
            <operation>equals</operation>
            <value>55464287</value>
        </filters>
        <label>D12356956</label>
    </listViews>
    <listViews>
        <fullName>Latest</fullName>
        <columns>NAME</columns>
        <columns>BU__c</columns>
        <columns>Rate__c</columns>
        <columns>Approved_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>PCKC__c</columns>
        <columns>isPriceHolder__c</columns>
        <columns>Sales_Price_Type__c</columns>
        <columns>markForDeletion__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BU__c</field>
            <operation>contains</operation>
            <value>P&amp;IP</value>
        </filters>
        <filters>
            <field>isPriceHolder__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>20th June</label>
    </listViews>
    <listViews>
        <fullName>My_Recent</fullName>
        <columns>NAME</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>Rate__c</columns>
        <columns>Per__c</columns>
        <columns>UoM__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approved_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Debra</value>
        </filters>
        <filters>
            <field>Price_Holder__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Recent</label>
    </listViews>
    <listViews>
        <fullName>SIT_view_25_02_2013</fullName>
        <columns>SAP_Cluster__c</columns>
        <columns>Pricing_Condition_Code__c</columns>
        <columns>Key_Combination_Code__c</columns>
        <columns>Sales_Org_Code__c</columns>
        <columns>Distribution_Channel_Code__c</columns>
        <columns>Division_Code__c</columns>
        <columns>Sold_To_Code__c</columns>
        <columns>PCKC_SAP__c</columns>
        <columns>Rate__c</columns>
        <columns>Unit__c</columns>
        <columns>Per__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>isPriceHolder__c</columns>
        <columns>Approved_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Org_Code__c</field>
            <operation>equals</operation>
            <value>A640</value>
        </filters>
        <filters>
            <field>Distribution_Channel_Code__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <filters>
            <field>Division_Code__c</field>
            <operation>equals</operation>
            <value>02</value>
        </filters>
        <filters>
            <field>Key_Combination_Code__c</field>
            <operation>equals</operation>
            <value>A772</value>
        </filters>
        <filters>
            <field>Material_Code__c</field>
            <operation>equals</operation>
            <value>D11970565</value>
        </filters>
        <label>SIT-view-25/02/2013</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ZD91_A771</fullName>
        <columns>NAME</columns>
        <columns>Distribution_Channel_Code__c</columns>
        <columns>Division_Code__c</columns>
        <columns>isPriceHolder__c</columns>
        <columns>SAP_Cluster__c</columns>
        <columns>PCKC__c</columns>
        <columns>Price_Holder__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Sales_Org_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pricing_Condition_Code__c</field>
            <operation>equals</operation>
            <value>ZD91</value>
        </filters>
        <filters>
            <field>Key_Combination_Code__c</field>
            <operation>equals</operation>
            <value>A771</value>
        </filters>
        <label>ZD91-A771</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SPSAP:{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>ERP Sales Price Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Sales Prices - SAP</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Sharing_with_Public_Group__c</fullName>
        <label>Sharing with Public Group</label>
    </sharingReasons>
    <validationRules>
        <fullName>To_Prevent_Wrong_Mapping_in_Price_Holder</fullName>
        <active>true</active>
        <description>To_Prevent_Wrong_Mapping_in_Price_Holder</description>
        <errorConditionFormula>IF(AND(isPriceHolder__c =True,Price_Holder__c &lt;&gt; null) ,true, false)</errorConditionFormula>
        <errorDisplayField>Price_Holder__c</errorDisplayField>
        <errorMessage>Price Holder mapped wrong in system</errorMessage>
    </validationRules>
</CustomObject>